Revert to state before HTML removal