@@ -1,16 +1,11 @@
 package raisetech.student.management.controller;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -25,8 +20,8 @@ import raisetech.student.management.service.StudentService;
 @RestController
 public class StudentController {
 
-  private StudentService service;
-  private StudentConverter converter;
+  private final StudentService service;
+  private final StudentConverter converter;
 
   @Autowired
   public StudentController(StudentService service, StudentConverter converter) {
@@ -41,6 +36,13 @@ public class StudentController {
     return converter.convertStudentDetails(students, studentCourses);
   }
 
+  // Uuidから個人検索
+  @GetMapping("/student/{studentUuid}")
+  public StudentDetail getStudent(@PathVariable String studentUuid) {
+    StudentDetail studentDetail = service.searchStudent(studentUuid);
+    return service.searchStudent(studentUuid);
+  }
+
   @GetMapping("/studentCourseList")
   public List<StudentCourses> getStudentCourseList() {
     return service.searchStudentCourseList();
@@ -49,29 +51,21 @@ public class StudentController {
   @GetMapping("/newStudent")
   public String newStudent(Model model) {
     StudentDetail studentDetail = new StudentDetail();
-    studentDetail.setStudentCourses(Arrays.asList(new StudentCourses()));
+    studentDetail.setStudentCourses(List.of(new StudentCourses()));
     model.addAttribute("studentDetail", studentDetail);
     return "registerStudent";
   }
 
+  // 新規受講生情報を登録する処理を実装する。
   @PostMapping("/registerStudent")
-  public String registerStudent(@ModelAttribute StudentDetail studentDetail, BindingResult result) {
-    if (result.hasErrors()) {
-      return "registerStudent";
-    }
-    // 新規受講生情報を登録する処理を実装する。
-    // ＜いらない？＞StudentDetail → Student に変換
-    // ＜いらない？＞Student student = converter.convertToStudent(studentDetail);
-
+  public ResponseEntity<StudentDetail> registerStudent(@RequestBody StudentDetail studentDetail) {
     // Service に渡して DB に登録
-    service.registerStudent(studentDetail);
-
-    return "redirect:/studentList"; // 登録後、一覧ページに戻る
+    StudentDetail responseStudentDetail = service.registerStudent(studentDetail);
+    return ResponseEntity.ok(responseStudentDetail);
   }
 // ============================================================
 // 🔽 編集画面表示
 // ============================================================
-
   // 先生のコードはこう
   // @GetMapping("/student/{id")
   // public String getStudent(@PathVariable String id, Model model) {
